--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before-install:
 
 script:
   - docker run -e CI=true rke/docker-react-demo npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region:  "ap-southeast-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-2-750001264354"
+  bucket_name: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
